2003-04-23 Serg Stoyan <stoyan@hologr.com>

	* PCLib/PCDefines.h: SeparateBuilder, SeparateLauncher,
	SeparateEditor defines were added.

	* PCLib/PCProject+ComponentHandling.m: Add ability to display
	ProjectBuilder as separate panel or as view inside main project
	window.
	
	* PCLib/PCProject+UInterface.m: Ditto.
	
	* PCLib/PCProjectBuilder.m: Ditto.

	* PCLib/PCProjectBuilder.h: Ditto.
	
	* PCLib/PCProject.m:
	(windowWillClose:): Removed calling showBuildView: hack.
	
	* PCLib/PCProjectManager.m:
	(loadProjectAt:): Removed centering project window.
	
	* ProjectCenter/PCPrefController.h: separateBuilder separateLauncher,
	id separateEditor defines added.

	* ProjectCenter/PCPrefController.m: Added new section "Interface".
	Moved "Use external Editor" and "Prompt when quitting" from
	"Miscellaneous" section into "Interface" section. Cleanup.
	
	* ChangLogs in all subprojects moved to ChangeLog.old files.
	All changes should go into this ChangeLog only.
	
2003-01-25  Daniel Luederwald <das_flip@gmx.de>

	* GNUmakefile (SUBPROJECTS): New project PCRenaissanceProj

2002-10-06 15:45  probert

	* AUTHORS, PCLib/PCEditor.h, PCLib/PCEditor.m,
	PCLib/PCEditorView.m, PCLib/PCProjectEditor.h,
	PCLib/PCProjectEditor.m, ProjectCenter/ProjectCenterInfo.plist,
	ProjectCenter/ProjectCenter_main.m: Updated the AUTHORS file and
	applied David Ayers' patch.

2002-08-10 16:24  probert

	* AUTHORS: Added the AUTHORS file

2002-08-10 14:10  probert

	* PCLib/PCEditor.m: Applied patch sent in by O. Kornilov to avoid
	exception when clicking on file name in browser

2002-08-10 13:41  probert

	* PCLib/PCEditorView+Highlighting.m: Removed call to super's
	initialize

2002-06-01 16:00  probert

	* INSTALL, PCAppProj/ChangeLog, PCBaseFileTypes/ChangeLog,
	PCBundleProj/ChangeLog, PCGormProj/ChangeLog, PCLib/ChangeLog,
	PCLibProj/ChangeLog, PCToolProj/ChangeLog, ProjectCenter/ChangeLog:
	Updated ChangeLogs

2002-06-01 15:56  probert

	* PCBaseFileTypes/GNUmakefile,