@@ -24,6 +24,7 @@
    $Id$
 */
 
+#include "PCProject+UInterface.h"
 #include "PCToolProject.h"
 #include "PCToolProj.h"
 
